
0.91: 12/20/99 Fixed bug that occurred when creating new pages.

0.90: 12/19/99 Added user-defined links (i.e. [1], [2] etc) and embedded
images. This is the first beta release. Only an issue with second-level
lists remains, and a couple of other minor things.

0.81: 12/19/99 Fixed another wiki word linking issue. It arose from
having similar patterns in words in the same line.

0.80: 12/18/99 I'm bumping up the version to .8 because it's that close.
I finally solved the crucial linking problem, by reinventing how
classic Wiki does it ;-) URL's are first replaced with tokens, then Wiki
words are linked, then linked URL's are put back. I improved the code a
great deal for the differnet "modes" of display text; I have a function
maintain the mode, and whether end tags are needed or not.

0.07: 12/18/99 Fixed minor bug in preformatted/bulleted code output; fixed
reverse linking of page titles

0.06: 12/15/99: Added ChangeSpacesToTabs

0.05: 12/14/99: Added title searches, RecentChanges, fixed numerous bugs like
only trying to render valid page names, the last-edited-date, removed
the navigation toolbars, linked the new logo to HomePage, and a half
dozen other odd things. It's almost ready.

0.04: 12/12/99: Several additions to markup:
   italics 
   bold
   preformatted text
   unordered lists (one level only, tow levels breaks)

In addition, wiki links have been further debugged, but I still
haven't solved the problem with wiki-links inside URLs.
   
0.03: 12/4/99: Pages are now serialized arrays instead of text blobs. Some
markup rules have been implemented. HTML is escaped; Wiki linking works
but
undefined pages do not have the question mark after them (they look like
a regular link to a Wiki page.) URL's hyperlink and should accept most
legal
URL's.

0.02: 12/3/99: Basic page editing/saving/displaying is now working.

Prior to 0.02, there were no numbered releases, and in fact there
was only one release, so I guess that would be 0.01 :-)