@@ -233,3 +233,5 @@ phpwiki-talk list at phpwiki-talk@lists.sourceforge.net.
 
 Carsten Klapp
 carstenklapp@mac.com
+
+$Id: INSTALL.MacOSX,v 1.8 2001-12-27 18:11:24 carstenklapp Exp $
