@@ -1,4 +1,6 @@
 /**
+ * $Id: phpwiki-printer.css,v 1.2 2001-12-27 18:11:39 carstenklapp Exp $
+ *
  * PhpWiki style sheet for the printed page:
  * Black on white only, with no toolbar commands and no link icons.
  * Styles are kept to a minimum, so the printed page will otherwise
