@@ -1,3 +1,5 @@
+/* $Id: WikiTrek-gravimetric.css,v 1.2 2001-12-27 18:12:00 carstenklapp Exp $ */
+
 .toolbar .wiki {
         color :           #000;
 }
