@@ -1,4 +1,6 @@
 /**
+ * $Id: WikiTrek.css,v 1.3 2001-12-27 18:12:05 carstenklapp Exp $
+ *
  * This PhpWiki theme is experimental and will likely not appear as part of any release.
  * ("accessories not included"--download seperately)
  *
